<resources>
    <string name="app_name">IShare</string>
    <string name="my_cource">爱分享</string>
    <string name="all_cource">课程</string>
    <string name="sign_in">签到</string>
    <string name="exam">考试</string>
    <string name="my">我的</string>
    <string name="exit">再按一次返回退出应用</string>
    <string name="student">我是学员</string>
    <string name="teacher">我是讲师</string>
    <string name="item_all_cource">全部</string>
    <string name="item_common_cource">普通</string>
    <string name="item_high_cource">高级</string>
    <string name="item_share_cource">审核</string>
    <string name="item_client_share_cource">分享</string>
    <string name="item_cource_exam">课程考试</string>
    <string name="item_only_exam">只考试</string>
    <string name="item_exam">全部考试</string>
    <string name="item_waite_share">待审核</string>
    <string name="item_pass_share">已通过</string>
    <string name="login_client">普通用户</string>
    <string name="login_admin">管理员</string>
    <string name="login_sign_in">注册</string>
    <string name="title_back">返回</string>
    <string name="alterLesson">修改课时</string>
    <string name="alterLessonForSure">确认修改</string>
    <string name="lesson_QRCodeImage_generate_button_text">生成二维码</string>
    <string name="lessonComment">查看评价</string>
    <string name="deleteLessonButton">删除课时</string>
    <string name="lesson_teacher">讲师:</string>
    <string name="lesson_address">地址:</string>
    <string name="lesson_start_time">时间:</string>
    <string name="lesson_time">时长:</string>
    <string name="lesson_teacher_credits">讲师积分:</string>
    <string name="lesson_student_credits">学员积分:</string>
    <string name="lesson_sign_in_number">签到人数:</string>
    <string name="lesson_sign_in_details">查看详情</string>
    <string name="activity_manager_exam_scorebtn">试卷批阅</string>
    <string name="activity_manager_exam_editbtn">修改考试</string>
    <string name="activity_manager_exam_deletebtn">删除考试</string>
    <string name="activity_manager_exam_enrollbtn">报名考试</string>
    <string name="exam_credits">考试积分:</string>
    <string name="exam_number">报名人数:</string>
    <string name="exam_number_details">查看详情</string>
    <string name="share_pass">通过</string>
    <string name="share_reject">否决</string>
    <string name="share_change">修改</string>
    <string name="cource_type">课程类型</string>
    <string name="cource_is_exam">是否考试</string>
    <string name="cource_delete">删除课程</string>
    <string name="cource_change">修改课程</string>
    <string name="cource_add_lesson">添加课时</string>
    <string name="cource_enroll_manager">报名管理</string>
    <string name="cource_enroll">高级课程报名</string>
    <string name="cource_share">技术分享信息</string>
    <string name="scan_text">扫描二维码完成签到</string>
    <string name="login_id_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="regist_pwd1_hint">请输入密码</string>
    <string name="regist_pwd2_hint">请重复密码</string>
    <string name="regist_name_hint">请输入姓名</string>
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="ismanager">
        <item>否</item>
        <item>是</item>
    </string-array>
    <string-array name="courseType">
        <item>course</item>
        <item>senior</item>
    </string-array>
    <string name="copyright">Copyright © 2011–2015 nubia   版权所有</string>
    <string name="icon_course">课程</string>
    <string name="icon_exam">考试</string>
    <string name="icon_share">技术分享</string>
    <string name="icon_my">我的</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_my_course">我的课程</string>
    <string name="bottom_all_course">全部课程</string>
    <string name="bottom_my_setting">我的设置</string>
    <string name="frame_my_setting_title">个人设置</string>
    <string name="title_activity_login">登录爱培训</string>
    <string name="login_name_hint">请输入个人姓名</string>
    <string name="login_sex">性别：</string>
    <string name="login_manager">是否管理员：</string>
    <string name="login_ismanager">是否管理员</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="regist">注册账号</string>
    <string name="logintxt">爱培训会员登录</string>
    <string name="registtxt">爱培训会员注册</string>
    <string name="activity_my_sharecourse_detail_display_title_textview">课程信息</string>
    <string name="activity_my_sharecourse_detail_display_coursename_textView">课程名称：</string>
    <string name="activity_my_sharecourse_detail_display_coursedescription_textView">课程简介：</string>
    <string name="activity_my_sharecourse_detail_display_courselevel_textView">课程级别：</string>
    <string name="activity_my_sharecourse_detail_display_coursedate_textView">上课日期：</string>
    <string name="activity_my_sharecourse_detail_display_coursestarttime_textView">上课时间：</string>
    <string name="activity_my_sharecourse_detail_display_courseendtime_textView">下课时间：</string>
    <string name="activity_my_sharecourse_detail_display_courselocale_textView">上课地点：</string>
    <string name="activity_my_accountmana_pswmodify_tittle_textview">密码修改</string>
    <string name="activity_my_accountmana_pswmodify_oldpsw_textview">请输入旧密码</string>
    <string name="activity_my_accountmana_pswmodify_newpsw_textview">请输入新密码</string>
    <string name="activity_my_accountmana_pswmodify_confirmpsw_textview">请确认新密码</string>
    <string name="activity_my_sharecourse_detail_fill_title_textView">课程信息</string>
    <string name="activity_my_sharecourse_detail_fill_coursename_textView">课程名称：</string>
    <string name="activity_my_sharecourse_detail_fill_coursedescription_textView">课程简介：</string>
    <string name="activity_my_sharecourse_detail_fill_courselevel_textView">课程级别：</string>
    <string name="activity_my_sharecourse_detail_fill_coursedate_textView">上课日期：</string>
    <string name="activity_my_sharecourse_detail_fill_coursestarttime_textView">上课时间：</string>
    <string name="activity_my_sharecourse_detail_fill_courseendtime_textView">下课时间：</string>
    <string name="activity_my_sharecourse_detail_fill_courselocale_textView">上课地点：</string>
    <string name="activity_my_sharecourse_detail_fill_courselocale_pikertime_button">选择时间</string>
    <string name="activity_mycourse_judge_detail_fill_title_textView">课程评价</string>
    <string name="activity_mycourse_judge_detail_fill_contentapplicability_textView">课程内容适用性：</string>
    <string name="activity_mycourse_judge_detail_fill_ContentRationality_textView">课程编排合理性：</string>
    <string name="activity_mycourse_judge_detail_fill_Discussion_textView">课程中的讨论、练习及案例：</string>
    <string name="activity_mycourse_judge_detail_fill_TimeRationality_textView">授课时间分配：</string>
    <string name="activity_mycourse_judge_detail_fill_ContentUnderstanding_textView">教师对课程认识：</string>
    <string name="activity_mycourse_judge_detail_fill_ExpressionAbility_textView">教师语言表达：</string>
    <string name="activity_mycourse_judge_detail_fill_Communication_textView">教师沟通互动：</string>
    <string name="activity_mycourse_judge_detail_fill_Organization_textView">培训组织工作：</string>
    <string name="activity_mycourse_judge_detail_fill_ComprehensiveEvaluation_textView">对课程的综合评价：</string>
    <string name="activity_mycourse_judge_detail_fill_Suggestion_textView">对课程的其他建议：</string>
    <string name="modify_button">修改</string>
    <string name="confirm_button">确定</string>
    <string name="cancel_button">取消</string>
    <string name="judge_button">评价</string>
    <string name="manger_setting_title">设置</string>
    <string name="manger_setting_score_title">考试成绩设置</string>
    <string name="manager_no_record">没有数据。</string>
    <string name="manger_setting_teb1">按学员查询</string>
    <string name="manger_setting_tab2">按课程查询</string>
    <string name="title_activity_manager_score">考试成绩查询</string>
    <string name="title_activity_manager_score_input">考试成绩录入</string>
    <string name="title_activity_manager_score_input_button">确认录入</string>
    <string name="title_activity_manager_credit_title">积分查询</string>
    <string name="activity_manager_rate_title">评级规则设置</string>
    <string name="activity_manager_rate_tip">请分别设定各个区间\n的取值范围！（0~5）</string>
    <string name="activity_manager_rate_A">优秀课程</string>
    <string name="activity_manager_rate_B">良好课程</string>
    <string name="activity_manager_rate_C">一般课程</string>
    <string name="activity_manager_rate_button">确认修改</string>
    <string name="activity_manager_rate_hint">请输入取值范围</string>
    <string name="title_activity_manager_score_user">ManagerScoreUserActivity</string>
    <string name="title_activity_manager_score_course">ManagerScoreCourseActivity</string>
    <string name="title_activity_manager_score_user_detail">ManagerScoreUserDetailActivity</string>
    <string name="title_activity_manager_score_course_detail">ManagerScoreCourseDetailActivity</string>
    <string name="title_activity_manager_credit">ManagerCreditActivity</string>
    <string name="title_activity_manager_credit_total">ManagerCreditTotalActivity</string>
    <string name="title_activity_manager_credit_course">ManagerCreditCourseActivity</string>
    <string name="title_activity_manager_rate">ManagerRateActivity</string>
    <string name="component_piker_confirm_button">确定</string>
    <string name="component_piker_cancel_button">取消</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="allCourse">全部课程</string>
    <string name="addCourse">新增课程</string>
    <string name="returnBack">Back</string>
    <string name="courseName">课程名称</string>
    <string name="courseDesc">课程简介</string>
    <string name="enrollseniorcoursebtn">报名课程</string>
    <string name="signUpAdminBtn">报名管理</string>
    <string name="alterCourseBtn">修改课程</string>
    <string name="lessonAddBtn">添加课时</string>
    <string name="courseDeleteBtn">删除课程</string>
    <string name="coursePoints">课程积分</string>
    <string name="addCourseForSure">确认新增</string>
    <string name="alterCourse">修改课程</string>
    <string name="whetherExam">是否考试</string>
    <string name="whetherHighLevelCourse">是否高级课程</string>
    <string name="alterCourseForSure">确认修改</string>
    <string name="addLesson">添加课时</string>
    <string name="lessonName">课时名称</string>
    <string name="teacherName">教师姓名</string>
    <string name="lessonDesc">课时简介</string>
    <string name="lessonLocation">上课地点</string>
    <string name="lessonStartTime">上课时间</string>
    <string name="teacherGetPoints">讲师积分</string>
    <string name="studentGetPoints">学员积分</string>
    <string name="addLessonForSure">确认添加</string>
    <string name="signInInfo">签到/报考人员信息</string>
    <string name="allExam">所有考试</string>
    <string name="addExam">新增考试</string>
    <string name="examDesc">考试简介</string>
    <string name="examLocation">考试地点</string>
    <string name="examStartTime">考试时间</string>
    <string name="examGetPoints">考试积分</string>
    <string name="addExamForSure">确认增加</string>
    <string name="inputScore">考试成绩录入</string>
    <string name="alterExam">修改考试</string>
    <string name="getPoints">获得积分</string>
    <string name="alterExamForSure">确定修改</string>
    <string name="examInfo">考试信息</string>
    <string name="deleteExam">删除考试</string>
    <string name="markExam">批阅考试</string>
    <string name="title_activity_manager_user">ManagerUserActivity</string>
    <string name="activity_manager_user">用户管理</string>
    <string name="activity_manager_award_title">积分奖励</string>
    <string name="activity_manager_awarded_name">受奖人姓名</string>
    <string name="activity_manager_awarded_credits">奖励积分</string>
    <string name="activity_manager_awarded_cause">奖励原因</string>
    <string name="activity_manager_add_exam_title">新增考试</string>
    <string name="activity_manager_edit_exam_title">修改考试</string>
    <string name="two_dimension">二维码图片</string>
    <string name="app_version">版本：Version 1.0</string>
    <string name="about_us">\u0020\u0020\u0020\u0020\u0020\u0020\u0020爱培训是nubia技术有限公司推出的一款专门为部门内部员工量身定制的培训神器，拥有最全面的最及时的课程信息，第一时间为你提供最精准便捷的课程分享信息，爱培训将给你最畅快的上课体验。</string>
</resources>