<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/admin_add_course_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@mipmap/ic_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/alterLesson"
                android:textSize="36sp" />

        </LinearLayout>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1"
        android:padding="15dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lessonName"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_lessonName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/teacherName"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_teacherName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lessonDesc"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_lessonDesc_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lessonLocation"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_lessonLocation_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/lessonStartTime"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_lessonStartTime_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/teacherGetPoints"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_teacherGetPoints_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/studentGetPoints"
                android:textColor="#666666"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alter_lesson_studentGetPoints_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true" />

        </TableRow>


    </TableLayout>

    <Button android:id="@+id/add_course_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/alterLessonForSure"
        android:textSize="20sp"
        />

</LinearLayout>