<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/jiangyu_item_smallverticalmargin">

        <Button
            android:id="@+id/my_sharecourse_detail_display_backbutton"
            android:layout_width="@dimen/jiangyu_small_buttonsize"
            android:layout_height="@dimen/jiangyu_small_buttonsize"
            android:background="@mipmap/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/jiangyu_title_textsize"
            android:text="@string/activity_my_sharecourse_detail_display_title_textview"/>
        <Button
            android:id="@+id/my_sharecourse_detail_display_modifybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/activity_my_sharecourse_detail_display_coursemodify_button"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/contentrealm"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">

        <LinearLayout
            style="@style/contentrealm"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_coursename_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_coursename_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_courselevel_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_courselevel_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_courselocale_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_courselocale_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_coursedate_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_coursedate_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_coursestarttime_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_coursestarttime_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_courseendtime_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_courseendtime_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/itemtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_my_sharecourse_detail_display_coursedescription_textView"/>

            <TextView
                style="@style/itemcontent"
                android:id="@+id/my_sharecourse_detail_display_coursedescription_displaytextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/jiangyu_item_normallverticalmargin"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>