<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/admin_course_detail_backImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:src="@mipmap/ic_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/course_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="15sp">

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseName"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/course_realName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXXXX"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="15sp">

        <TextView
            android:id="@+id/course_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseDesc"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/course_realDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XXXXXXXX"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="40sp">

        <Button
            android:id="@+id/signUpAdminBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/signUpAdminBtn"
            android:textSize="30dp" />

        <Button
            android:id="@+id/alterCourseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/alterCourseBtn"
            android:textSize="30dp" />

        <Button
            android:id="@+id/lessonAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/lessonAddBtn"
            android:textSize="30dp" />

        <Button
            android:id="@+id/courseDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/courseDeleteBtn"
            android:textSize="30dp" />

    </RelativeLayout>
</LinearLayout>







